ndpi/src/include/ndpi_api.h

  
  u_int32_t ndpi_detection_get_sizeof_ndpi_flow_struct(void);
  void * ndpi_flow_malloc(size_t size);
  struct ndpi_detection_module_struct *ndpi_init_detection_module(struct ndpi_global_context *g_ctx);
  int ndpi_finalize_initialization(struct ndpi_detection_module_struct *ndpi_str);
  void ndpi_free_flow(struct ndpi_flow_struct *flow);
  ndpi_protocol ndpi_detection_process_packet(struct ndpi_detection_module_struct *ndpi_struct,
					      struct ndpi_flow_struct *flow,
					      const unsigned char *packet,
					      const unsigned short packetlen,
					      const u_int64_t packet_time_ms,
					      struct ndpi_flow_input_info *input_info);
  char* ndpi_get_proto_name(struct ndpi_detection_module_struct *mod, u_int16_t proto_id);