ndpi/src/include/ndpi_typedefs.h

typedef unsigned char u_char;
typedef unsigned char u_char;
typedef u_int64_t ndpi_risk; 
struct ndpi_dissector_bitmask {
  ndpi_ndpi_mask fds[NDPI_NUM_FDS_DISSECTORS];
};
struct ndpi_detection_module_struct;
struct ndpi_flow_input_info {
  unsigned char in_pkt_dir; 
  unsigned char seen_flow_beginning;
};
typedef union
{
  u_int32_t ipv4;
  struct ndpi_in6_addr ipv6;
} ndpi_ip_addr_t;
typedef struct message {
  u_int8_t *buffer;
  u_int buffer_len, buffer_used;
  u_int32_t next_seq;
} message_t;
typedef enum {
	      NDPI_HTTP_METHOD_UNKNOWN = 0,
	      NDPI_HTTP_METHOD_OPTIONS,
	      NDPI_HTTP_METHOD_GET,
	      NDPI_HTTP_METHOD_HEAD,
	      NDPI_HTTP_METHOD_PATCH,
	      NDPI_HTTP_METHOD_POST,
	      NDPI_HTTP_METHOD_PUT,
	      NDPI_HTTP_METHOD_DELETE,
	      NDPI_HTTP_METHOD_TRACE,
	      NDPI_HTTP_METHOD_CONNECT,
	      NDPI_HTTP_METHOD_RPC_CONNECT,
	      NDPI_HTTP_METHOD_RPC_IN_DATA,
	      NDPI_HTTP_METHOD_RPC_OUT_DATA,
	      NDPI_HTTP_METHOD_MKCOL,
	      NDPI_HTTP_METHOD_MOVE,
	      NDPI_HTTP_METHOD_COPY,
	      NDPI_HTTP_METHOD_LOCK,
	      NDPI_HTTP_METHOD_UNLOCK,
	      NDPI_HTTP_METHOD_PROPFIND,
	      NDPI_HTTP_METHOD_PROPPATCH,
} ndpi_http_method;
struct ndpi_flow_tcp_struct {
  struct {
    u_int64_t syn_time, syn_ack_time, ack_time;
  } three_way_handshake;
  u_int32_t next_tcp_seq_nr[2];
  u_int16_t last_tcp_pkt_payload_len;
  u_int8_t cli2srv_tcp_flags, srv2cli_tcp_flags;
  struct {
    u_int8_t auth_found:1, auth_failed:1, auth_tls:1, auth_done:1, _pad:4;
    char username[32], password[16];
  } ftp_imap_pop_smtp;
  struct {
    u_int8_t app_data_seen[2];
    u_int8_t num_tls_blocks ;
    u_int64_t last_tls_block_time_ms;
    struct ndpi_tls_block *tls_blocks; 
  } tls;
  u_int16_t smtp_command_bitmask;
  u_int16_t pop_command_bitmask;
  u_int16_t rtmp_client_buffer_len;
  u_int8_t hcl_notes_packet_id;
  u_int8_t wa_matched_so_far;
  u_int8_t nest_log_sink_matches;
  u_int8_t memcached_matches;
  u_int64_t seen_syn:1, seen_syn_ack:1, seen_ack:1;
  u_int64_t irc_stage:2;
  u_int64_t usenet_stage:2;
  u_int64_t http_stage:3;
  u_int64_t http_asymmetric_stage:2;
  u_int64_t gnutella_stage:2;
  u_int64_t ssh_stage:3;
  u_int64_t vnc_stage:2;
  u_int64_t radmin_stage:1;
  u_int64_t ftp_control_stage:2;
  u_int64_t soap_stage:1;
  u_int64_t socks5_stage:2;
  u_int64_t socks4_stage:2;
  u_int64_t z3950_stage:2;
  u_int64_t rtmp_stage:2;
  u_int64_t postgres_stage:3;
  u_int64_t mail_pop_stage:2;
  u_int64_t mail_imap_stage:3;
  u_int64_t mail_imap_starttls:1;
  u_int64_t rdp_protocol_detected:1;
  u_int64_t reserved:21;
};
struct ndpi_flow_udp_struct {
  u_int32_t tftp_stage:2;
  u_int32_t xbox_stage:1;
  u_int32_t quic_server_cid_stage:2;
  u_int32_t quic_0rtt_found:1;
  u_int32_t quic_vn_pair:1;
  u_int32_t lolwildrift_stage:1;
  u_int32_t zoom_p2p:1;
  u_int32_t raknet_custom:1;
  u_int32_t mumble_stage:1;
  u_int32_t hamachi_stage:2;
  u_int32_t epicgames_stage:1;
  u_int32_t epicgames_word;
  u_int32_t rx_conn_epoch;
  u_int32_t rx_conn_id;
  u_int32_t wireguard_peer_index[2];
  u_int8_t wireguard_stage;
  u_int8_t memcached_matches;
  u_int8_t eaq_pkt_id;
  u_int32_t eaq_sequence;
  u_int64_t mumble_ident;
  u_int32_t hamachi_long[2];
  u_int16_t hamachi_short[2];
  u_int8_t *quic_reasm_buf;
  u_int8_t *quic_reasm_buf_bitmap;
  u_int32_t quic_reasm_buf_last_pos;
#define QUIC_SERVER_CID_HEURISTIC_LENGTH	8
  u_int8_t quic_server_cid[QUIC_SERVER_CID_HEURISTIC_LENGTH];
  u_int8_t quic_client_last_byte;
  u_int8_t quic_orig_dest_conn_id[20]; 
  u_int8_t quic_orig_dest_conn_id_len;
  u_int8_t rdp_to_srv[3], rdp_from_srv[3], rdp_to_srv_pkts, rdp_from_srv_pkts;
  u_int8_t imo_last_one_byte_pkt, imo_last_byte;
  u_int8_t line_pkts[2];
  u_int8_t line_base_cnt[2];
  u_int16_t tftp_data_num;
  u_int16_t tftp_ack_num;
  u_int8_t ntp_stage;
};
struct ndpi_detection_module_struct;
struct ndpi_flow_struct;
typedef enum {
  NDPI_CONFIDENCE_UNKNOWN           = 0,    
  NDPI_CONFIDENCE_MATCH_BY_PORT,            
  NDPI_CONFIDENCE_NBPF,                     
  NDPI_CONFIDENCE_DPI_PARTIAL,              
  NDPI_CONFIDENCE_DPI_PARTIAL_CACHE,        
  NDPI_CONFIDENCE_DPI_CACHE,                
  NDPI_CONFIDENCE_DPI,                      
  NDPI_CONFIDENCE_MATCH_BY_IP,              
  NDPI_CONFIDENCE_DPI_AGGRESSIVE,           
  NDPI_CONFIDENCE_CUSTOM_RULE,              
  NDPI_CONFIDENCE_MAX,
} ndpi_confidence_t;
typedef enum {
  NDPI_PROTOCOL_UNRATED = 0,           
  NDPI_PROTOCOL_SAFE,                  
  NDPI_PROTOCOL_ACCEPTABLE,            
  NDPI_PROTOCOL_FUN,                   
  NDPI_PROTOCOL_UNSAFE,                
  NDPI_PROTOCOL_POTENTIALLY_DANGEROUS, 
  NDPI_PROTOCOL_DANGEROUS,             
  NDPI_PROTOCOL_TRACKER_ADS,           
} ndpi_protocol_breed_t;
typedef enum {
  NDPI_PROTOCOL_CATEGORY_UNSPECIFIED = 0,   
  NDPI_PROTOCOL_CATEGORY_MEDIA,             
  NDPI_PROTOCOL_CATEGORY_VPN,               
  NDPI_PROTOCOL_CATEGORY_MAIL,              
  NDPI_PROTOCOL_CATEGORY_DATA_TRANSFER,     
  NDPI_PROTOCOL_CATEGORY_WEB,               
  NDPI_PROTOCOL_CATEGORY_SOCIAL_NETWORK,    
  NDPI_PROTOCOL_CATEGORY_DOWNLOAD_FT,       
  NDPI_PROTOCOL_CATEGORY_GAME,              
  NDPI_PROTOCOL_CATEGORY_CHAT,              
  NDPI_PROTOCOL_CATEGORY_VOIP,               
  NDPI_PROTOCOL_CATEGORY_DATABASE,          
  NDPI_PROTOCOL_CATEGORY_REMOTE_ACCESS,     
  NDPI_PROTOCOL_CATEGORY_CLOUD,             
  NDPI_PROTOCOL_CATEGORY_NETWORK,           
  NDPI_PROTOCOL_CATEGORY_COLLABORATIVE,     
  NDPI_PROTOCOL_CATEGORY_RPC,               
  NDPI_PROTOCOL_CATEGORY_STREAMING,         
  NDPI_PROTOCOL_CATEGORY_SYSTEM_OS,         
  NDPI_PROTOCOL_CATEGORY_SW_UPDATE,         
  NDPI_PROTOCOL_CATEGORY_CUSTOM_1,           
  NDPI_PROTOCOL_CATEGORY_CUSTOM_2,          
  NDPI_PROTOCOL_CATEGORY_CUSTOM_3,          
  NDPI_PROTOCOL_CATEGORY_CUSTOM_4,          
  NDPI_PROTOCOL_CATEGORY_CUSTOM_5,          
  NDPI_PROTOCOL_CATEGORY_MUSIC,
  NDPI_PROTOCOL_CATEGORY_VIDEO,
  NDPI_PROTOCOL_CATEGORY_SHOPPING,
  NDPI_PROTOCOL_CATEGORY_PRODUCTIVITY,
  NDPI_PROTOCOL_CATEGORY_FILE_SHARING,
  NDPI_PROTOCOL_CATEGORY_CONNECTIVITY_CHECK, 
  NDPI_PROTOCOL_CATEGORY_IOT_SCADA,
  NDPI_PROTOCOL_CATEGORY_VIRTUAL_ASSISTANT,
  NDPI_PROTOCOL_CATEGORY_CYBERSECURITY,
  NDPI_PROTOCOL_CATEGORY_ADULT_CONTENT, 
  NDPI_PROTOCOL_CATEGORY_MINING           = 99,
  NDPI_PROTOCOL_CATEGORY_MALWARE          = 100,
  NDPI_PROTOCOL_CATEGORY_ADVERTISEMENT    = 101, 
  NDPI_PROTOCOL_CATEGORY_BANNED_SITE      = 102,
  NDPI_PROTOCOL_CATEGORY_SITE_UNAVAILABLE = 103,
  NDPI_PROTOCOL_CATEGORY_ALLOWED_SITE     = 104,
  NDPI_PROTOCOL_CATEGORY_ANTIMALWARE      = 105,
  NDPI_PROTOCOL_CATEGORY_CRYPTO_BLOCKCHAIN = 106,
  NDPI_PROTOCOL_CATEGORY_GAMBLING = 107,
  NDPI_PROTOCOL_CATEGORY_HEALTH,
  NDPI_PROTOCOL_CATEGORY_ARTIFICIAL_INTELLIGENCE,
  NDPI_PROTOCOL_CATEGORY_FINANCE, 
  NDPI_PROTOCOL_CATEGORY_NEWS,
  NDPI_PROTOCOL_CATEGORY_SPORT,
  NDPI_PROTOCOL_CATEGORY_BUSINESS,
  NDPI_PROTOCOL_CATEGORY_INTERNET_HOSTING,          
  NDPI_PROTOCOL_CATEGORY_BLOCKCHAIN_CRYPTO,
  NDPI_PROTOCOL_CATEGORY_BLOG_FORUM,
  NDPI_PROTOCOL_CATEGORY_GOVERNMENT,
  NDPI_PROTOCOL_CATEGORY_EDU_CATION,
  NDPI_PROTOCOL_CATEGORY_CDN_PROXY,
  NDPI_PROTOCOL_CATEGORY_HARDWARE_SOFTWARE, 
  NDPI_PROTOCOL_CATEGORY_DATING,
  NDPI_PROTOCOL_CATEGORY_TRAVEL,
  NDPI_PROTOCOL_CATEGORY_FOOD,
  NDPI_PROTOCOL_CATEGORY_BOTS, 
  NDPI_PROTOCOL_CATEGORY_SCANNERS, 
  NDPI_PROTOCOL_CATEGORY_HOSTING,
  NDPI_PROTOCOL_CATEGORY_ART,
  NDPI_PROTOCOL_CATEGORY_FASHION,
  NDPI_PROTOCOL_CATEGORY_BOOKS,
  NDPI_PROTOCOL_CATEGORY_SCIENCE, 
  NDPI_PROTOCOL_CATEGORY_MAPS_NAVIGATION,
  NDPI_PROTOCOL_CATEGORY_LOGIN_PORTAL,
  NDPI_PROTOCOL_CATEGORY_LEGAL,
  NDPI_PROTOCOL_CATEGORY_ENVIRONMENTAL_SERVICES,
  NDPI_PROTOCOL_CATEGORY_CULTURE,
  NDPI_PROTOCOL_CATEGORY_HOUSING,
  NDPI_PROTOCOL_CATEGORY_TELECOMMUNICATION,
  NDPI_PROTOCOL_CATEGORY_TRANSPORTATION,
  NDPI_PROTOCOL_CATEGORY_DESIGN,
  NDPI_PROTOCOL_CATEGORY_EMPLOYMENT, 
  NDPI_PROTOCOL_CATEGORY_EVENTS,
  NDPI_PROTOCOL_CATEGORY_WEATHER,
  NDPI_PROTOCOL_CATEGORY_LIFESTYLE,
  NDPI_PROTOCOL_CATEGORY_REAL_ESTATE,
  NDPI_PROTOCOL_CATEGORY_SECURITY,
  NDPI_PROTOCOL_CATEGORY_ENVIRONMENT,
  NDPI_PROTOCOL_CATEGORY_HOBBY,
  NDPI_PROTOCOL_CATEGORY_COMPUTER_SCIENCE,
  NDPI_PROTOCOL_CATEGORY_CONSTRUCTION,
  NDPI_PROTOCOL_CATEGORY_ENGINEERING, 
  NDPI_PROTOCOL_CATEGORY_RELIGION,
  NDPI_PROTOCOL_CATEGORY_ENTERTAINMENT,
  NDPI_PROTOCOL_CATEGORY_AGRICULTURE,
  NDPI_PROTOCOL_CATEGORY_TECHNOLOGY,
  NDPI_PROTOCOL_CATEGORY_BEAUTY,
  NDPI_PROTOCOL_CATEGORY_HISTORY,
  NDPI_PROTOCOL_CATEGORY_POLITICS,
  NDPI_PROTOCOL_CATEGORY_VEHICLES, 
  NDPI_PROTOCOL_CATEGORY_SEARCH_ENGINE, 
  NDPI_PROTOCOL_CATEGORY_CHILDREN,      
  NDPI_PROTOCOL_CATEGORY_VIOLENCE,      
  NDPI_PROTOCOL_CATEGORY_DRUGS,         
  NDPI_PROTOCOL_CATEGORY_WEAPONS,       
  NDPI_PROTOCOL_NUM_CATEGORIES, 
  NDPI_PROTOCOL_ANY_CATEGORY 
} ndpi_protocol_category_t;
typedef struct {
  u_int16_t master_protocol , app_protocol ;
} ndpi_master_app_protocol;
struct ndpi_fpc_info {
  ndpi_master_app_protocol proto;
  ndpi_fpc_confidence_t confidence;
};
typedef struct ndpi_proto_stack {
  u_int16_t protos[NDPI_PROTOCOL_STACK_SIZE];
  u_int16_t protos_num;
} ndpi_proto_stack;
typedef enum ndpi_classification_state {
  NDPI_STATE_INSPECTING = 0, 
  NDPI_STATE_PARTIAL,        
  NDPI_STATE_MONITORING,     
  NDPI_STATE_CLASSIFIED,     
} ndpi_classification_state;
typedef struct ndpi_proto {
  ndpi_master_app_protocol proto;
  struct ndpi_proto_stack protocol_stack;
  u_int16_t protocol_by_ip;
  ndpi_protocol_category_t category;
  ndpi_protocol_breed_t breed;
  struct ndpi_fpc_info fpc;
  void *custom_category_userdata;
  ndpi_classification_state state;
} ndpi_protocol;
typedef enum {
   ndpi_cipher_safe = NDPI_CIPHER_SAFE,
   ndpi_cipher_weak = NDPI_CIPHER_WEAK,
   ndpi_cipher_insecure = NDPI_CIPHER_INSECURE
} ndpi_cipher_weakness;
typedef struct {
  union {
    u_int32_t v4;
    u_int8_t v6[16];
  } address; 
  u_int16_t port;
  u_int16_t is_ipv6: 1, _pad: 15;
} ndpi_address_port;
struct tls_heuristics {
  u_int8_t is_safari_tls:1, is_firefox_tls:1, is_chrome_tls:1, notused:5;
};
struct ndpi_risk_information {
  ndpi_risk_enum id;
  char *info;
};
struct ndpi_metadata_monitoring {
  union {
    struct {
      ndpi_address_port mapped_address;
      ndpi_address_port peer_address;
      ndpi_address_port relayed_address;
      ndpi_address_port response_origin;
      ndpi_address_port other_address;
    } dtls_stun_rtp;
  } protos;
};
typedef enum {
  ndpi_os_unknown     = 0,
  ndpi_os_windows     = 1,
  ndpi_os_macos       = 2,
  ndpi_os_ios_ipad_os = 3,
  ndpi_os_android     = 4,
  ndpi_os_linux       = 5,
  ndpi_os_freebsd     = 6,
  ndpi_os_MAX_OS      = 7 
} ndpi_os;
struct rtp_info {
  u_int8_t payload_type;
  bool payload_detected;
  u_int32_t evs_subtype;
};
typedef struct ndpi_protocol_plugin {
  u_int32_t ndpi_revision;
  const char *protocol_name, *version, *description, *author;
  nDPIPluginFctn initFctn;
  nDPIPluginFreeFlowFctn freeFlowFctn;
  nDPIPluginJsonExportFlowFctn jsonExportFctn;
} NDPIProtocolPluginEntryPoint;
typedef int (*ProcessExtraPacketsFunc) (struct ndpi_detection_module_struct *, struct ndpi_flow_struct *flow);
typedef struct {
  u_int16_t tls_handshake_version;
  u_int16_t num_ciphers, cipher[MAX_NUM_JA];
  u_int16_t num_tls_extensions, tls_extension[MAX_NUM_JA];
  u_int16_t num_elliptic_curve_groups, elliptic_curve_group[MAX_NUM_JA];
  u_int16_t num_elliptic_curve_point_format, elliptic_curve_point_format[MAX_NUM_JA];
  u_int16_t num_signature_algorithms, signature_algorithm[MAX_NUM_JA];
  u_int16_t num_supported_versions, supported_version[MAX_NUM_JA];
  u_int16_t num_key_share_groups, key_share_group[MAX_NUM_JA];
  char signature_algorithms_str[MAX_JA_STRLEN], alpn[MAX_JA_STRLEN];
  char alpn_original_last;  
} ndpi_tls_client_info;
typedef struct {
  u_int16_t tls_handshake_version;
  u_int16_t num_ciphers, cipher[MAX_NUM_JA];
  u_int16_t num_tls_extensions, tls_extension[MAX_NUM_JA];
  u_int16_t tls_supported_version;
  u_int16_t num_elliptic_curve_point_format, elliptic_curve_point_format[MAX_NUM_JA];
  char alpn[MAX_JA_STRLEN];
} ndpi_tls_server_info;
struct ndpi_ipsec_details {
  u_int8_t version;             
  u_int8_t exchange_type;       
  struct ndpi_ipsec_proposal proposal[2];
};
struct ndpi_flow_struct {
  u_int16_t detected_protocol_stack[NDPI_PROTOCOL_SIZE];
  struct ndpi_proto_stack protocol_stack;
  ndpi_classification_state state;
  u_int16_t guessed_protocol_id;       
  u_int16_t guessed_protocol_id_by_ip; 
  u_int16_t fast_callback_protocol_id; 
  u_int16_t guessed_header_category;
  u_int8_t l4_proto, protocol_id_already_guessed:1,
    init_finished:1, client_packet_direction:1, packet_direction:1, is_ipv6:1, first_pkt_fully_encrypted:1, skip_entropy_check: 1, protocol_was_guessed:1;
  u_int8_t already_gaveup:1, _pad:6;
  void *custom_category_userdata;
  u_int16_t num_dissector_calls;
  ndpi_confidence_t confidence; 
  struct ndpi_fpc_info fpc;
  union {
    u_int32_t v4;
    u_int8_t v6[16];
  } c_address, s_address;	
  u_int16_t c_port, s_port;
  u_int8_t max_extra_packets_to_check;
  u_int8_t num_extra_packets_checked;
  u_int16_t num_processed_pkts; 
  ProcessExtraPacketsFunc extra_packets_func;
  u_int64_t last_packet_time_ms;
  ndpi_protocol_category_t category;
  ndpi_protocol_breed_t breed;
  u_int16_t packet_counter;
  u_int16_t packet_direction_counter[2];
  u_int16_t all_packets_counter;
  u_int16_t packet_direction_complete_counter[2];
  union {
    struct ndpi_flow_tcp_struct tcp;
    struct ndpi_flow_udp_struct udp;
  } l4;
  float entropy;
  char host_server_name[80];
  u_int8_t initial_binary_bytes[8], initial_binary_bytes_len;
  u_int8_t ip_risk_mask_evaluated:1, host_risk_mask_evaluated:1, tree_risk_checked:1, _notused:5;
  ndpi_risk risk_mask; 
  ndpi_risk risk, risk_shadow; 
  struct ndpi_risk_information risk_infos[MAX_NUM_RISK_INFOS]; 
  u_int8_t num_risk_infos;
  struct {
    char *fingerprint;
    char *fingerprint_raw;
    ndpi_os os_hint;
  } tcp;
  struct {
    char *client_fingerprint, *server_fingerprint;
  } ndpi;
  struct {
    ndpi_http_method method;
    u_int8_t request_version; 
    u_int8_t websocket:1, request_header_observed:1, first_payload_after_header_observed:1, is_form:1, _pad:4;
    u_int16_t response_status_code; 
    char *url, *content_type , *request_content_type , *user_agent, *server, *referer, *host;
    char *detected_os; 
    char *nat_ip; 
    char *filename; 
    char *username, *password;
  } http;
  u_int8_t flow_multimedia_types;
  struct {
    char *pktbuf;
    u_int16_t pktbuf_maxlen, pktbuf_currlen;
  } kerberos_buf;
  struct {
    u_int8_t maybe_dtls:1, rtcp_seen:1, is_turn : 1, is_client_controlling:1, pad : 4;
    ndpi_address_port mapped_address, peer_address, relayed_address, response_origin, other_address;
    u_int8_t num_xor_relayed_addresses, num_xor_mapped_addresses;
    u_int8_t num_non_stun_pkt, non_stun_pkt_len[2];
    u_int16_t rtp_counters[2];
    u_int32_t t_start, t_end;
  } stun;
  struct {
    message_t message[2]; 
    u_int8_t certificate_processed:1, change_cipher_from_client:1, change_cipher_from_server:1, from_opportunistic_tls:1, from_rdp:1, alert:1, pad:2;
    struct tls_obfuscated_heuristic_state *obfuscated_heur_state;
  } tls_quic; 
  struct rtp_info rtp[2 ];
  union {
    struct {
      u_int8_t num_queries, num_answers, reply_code, num_rsp_addr;
      u_int8_t is_query:1, pad:7;
      u_int16_t transaction_id, query_type, query_class, rsp_type, edns0_udp_payload_size;
      u_int8_t is_rsp_addr_ipv6[MAX_NUM_DNS_RSP_ADDRESSES];
      ndpi_ip_addr_t rsp_addr[MAX_NUM_DNS_RSP_ADDRESSES]; 
      u_int32_t rsp_addr_ttl[MAX_NUM_DNS_RSP_ADDRESSES];
      char geolocation_iata_code[4];
      char ptr_domain_name[64 ];
    } dns;
    struct ntp_info {
      u_int8_t leap_indicator: 2, version: 3, mode: 3;
      u_int8_t stratum;
      int8_t ppol, precision;
      float root_delay, root_dispersion;
      char ref_id[20];
      uint64_t ref_time, org_time, rec_time, trans_time;
    } ntp[2];
    struct {
      char hostname[48], domain[48], username[48];
    } kerberos;
    struct {
      char ip[16];
      char port[6];
      char hostname[48];
      char fqdn[48];
    } softether;
    struct {
      char currency[16];
    } mining;
    struct {
      char *server_names, *advertised_alpns, *negotiated_alpn, *tls_supported_versions, *issuerDN, *subjectDN;
      u_int32_t notBefore, notAfter;
      char ja3_server[33], ja4_client[37], ja4_ndpi_client[37], *ja4_client_raw;
      u_int16_t server_cipher;
      u_int8_t sha1_certificate_fingerprint[20];
      u_int8_t client_hello_processed:1, ch_direction:1, subprotocol_detected:1,
	server_hello_processed:1, fingerprint_set:1, webrtc:1;
      struct tls_heuristics browser_heuristics;
      u_int16_t ssl_version, server_names_len;
      struct {
        u_int16_t version;
      } encrypted_ch;
      ndpi_cipher_weakness server_unsafe_cipher;
      u_int32_t quic_version;
      u_int32_t quic_idle_timeout_sec;
      ndpi_tls_client_info *ja_client;
      ndpi_tls_server_info *ja_server;
    } tls_quic; 
    struct {
      char client_signature[48], server_signature[48];
      char hassh_client[33], hassh_server[33];
      char *client_key_exchange_algorithms,
	*server_key_exchange_algorithms,
	*key_exchange_method;
      char *client_hostkey_algorithms;
      char *client_cipher_c2s, *client_cipher_s2c;
      char *client_mac_c2s,    *client_mac_s2c;
      char *negotiated_hostkey_alg;
      char *negotiated_cipher_c2s, *negotiated_cipher_s2c;
      char *negotiated_mac_c2s,    *negotiated_mac_s2c;
    } ssh;
    struct {
      char filename[128];
    } tftp;
    struct {
      u_int8_t username_detected:1, username_found:1,
	password_detected:1, password_found:1,
	_pad:4;
      u_int8_t character_id;
      char username[32], password[32];
    } telnet;
    struct {
      char client_username[32];
      char server_username[32];
      char command[48];
    } rsh;
    struct {
      char client_username[32];
    } collectd;
    struct {
      char client_ip[16];
    } discord;
    struct {
      char version[64];
    } ubntac2;
    struct {
      u_char hash[20];
    } bittorrent;
    struct {
      char options[48];
      char fingerprint[48];
      char class_ident[48];
    } dhcp;
    struct {
      u_int8_t version;   
      u_int8_t primitive; 
      u_int8_t error_status;
    } snmp;
    struct {
      char identity_uuid[37];
      char machine[48];
      char platform[32];
      char services[48];
    } tivoconnect;
    struct {
      u_int16_t result_code;
      u_int16_t internal_port;
      u_int16_t external_port;
      ndpi_ip_addr_t external_address;
    } natpmp;
    struct {
      u_int8_t message_type;
      char method[64];
    } thrift;
    struct {
      u_int8_t url_count;
      char url[4][48];
    } slp;
    struct {
      char *from;
      char from_imsi[16]; 
      char *to;
      char to_imsi[16];
    } sip;
    struct {
      char mac_addr[6], identity[16], version[48], sw_id[16], board[32], iface_name[32];
      u_int32_t ipv4_addr, uptime;
      struct ndpi_in6_addr ipv6_addr;
    } mikrotik;
    struct {
      char *method;
      char *bootid;
      char *usn;
      char *cache_controle;
      char *location;
      char *household_smart_speaker_audio;
      char *rincon_household;
      char *rincon_bootseq;
      char *rincon_wifimode;
      char *rincon_variant;
      char *sonos_securelocation;
      char *securelocation_upnp;
      char *location_smart_speaker_audio;
      char *nt;
      char *nts;
      char *server;
      char *man;
      char *mx;
      char *st;
      char *user_agent;
    } ssdp;
    struct {
      ndpi_http_method method;
      char user_agent[32];
      char url[64];
    } fast_cgi;
    struct {
      u_int32_t conference_id;
      u_int16_t user_id;
    } bfcp;
    struct {
      u_int16_t num_requests;       
      u_int16_t num_responses;      
      u_int8_t num_acks;            
      u_int8_t num_userdata;        
      u_int8_t num_read_var;        
      u_int8_t num_write_var;       
      u_int8_t num_setup_comm;      
      u_int8_t num_download;        
      u_int8_t num_upload;          
      u_int8_t num_plc_control;     
      u_int8_t num_plc_stop;        
      u_int8_t num_other_funcs;     
    } s7comm;
    struct ndpi_ipsec_details ipsec;
  } protos;
  struct {
    NDPIProtocolPluginEntryPoint *plugin;
    void *plugin_data;
  } custom;
  struct ndpi_metadata_monitoring *monit;
  struct ndpi_dissector_bitmask excluded_dissectors_bitmask;
  u_int8_t bittorrent_stage;		      
  u_int8_t bt_check_performed : 1;
  u_int8_t ookla_stage : 1;
  u_int8_t teamviewer_stage : 3;
  u_int8_t ovpn_session_id[2][8];
  u_int8_t ovpn_alg_standard_state : 2;
  u_int8_t ovpn_alg_heur_opcode_state : 2;
  u_int8_t ovpn_heur_opcode__codes_num : 4;
  u_int8_t ovpn_heur_opcode__num_msgs;
#define OPENVPN_HEUR_MAX_NUM_OPCODES 4
  u_int8_t ovpn_heur_opcode__codes[OPENVPN_HEUR_MAX_NUM_OPCODES];
  u_int8_t ovpn_heur_opcode__resets[2];
  u_int16_t ovpn_heur_opcode__missing_bytes[2];
  u_int8_t tinc_state;
   u_int8_t rtcp_stage:2;
   u_int8_t rtp_stage:2;
   u_int8_t rtp_seq_set[2];
   u_int16_t rtp_seq[2];
  u_int16_t flow_payload_len;
  char *flow_payload;
  u_int8_t priv_data[16];
};